--- a/index.html
+++ b/index.html
@@ -1,34 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Type Here | App</title>
-    <!-- SEO Meta Tags -->
-    <meta
-      name="description"
-      content="A textbox with vim support to write and edit notes."
-    />
-    <meta
-      name="keywords"
-      content="typehere, type, here, type here, typehere.co, vim, productivity, notes, tasks, management, app"
-    />
-    <meta name="author" content="Shaoru Ian Huang" />
-    <meta property="og:title" content="Type Here | App" />
-    <meta
-      property="og:description"
-      content="A textbox with vim support to write and edit notes."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.typehereapp.com" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Type Here | App" />
-    <meta
-      name="twitter:description"
-      content="A textbox with vim support to write and edit notes."
-    />
-    <meta name="twitter:site" content="@shaoruu" />
+    <title>Type here</title>
   </head>
   <body>
     <div id="root"></div>
